// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardRepoListFallback should matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-bl1qof"
  >
    <div
      class="css-3a3hw0"
    >
      <div
        class="chakra-skeleton css-t9zdla"
      />
    </div>
    <div
      class="css-3a3hw0"
    >
      <div
        class="chakra-skeleton css-t9zdla"
      />
    </div>
    <div
      class="css-3a3hw0"
    >
      <div
        class="chakra-skeleton css-t9zdla"
      />
    </div>
    <div
      class="css-3a3hw0"
    >
      <div
        class="chakra-skeleton css-t9zdla"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DashboardRepoListFallback should matches snapshot DashboardRepoListItemFallback 1`] = `
<DocumentFragment>
  <div
    class="css-3a3hw0"
  >
    <div
      class="chakra-skeleton css-t9zdla"
    />
  </div>
</DocumentFragment>
`;
